Fixed spacing in cart toggle when html minification is enabled

--- a/web/css/layout/_minicart.less
+++ b/web/css/layout/_minicart.less
@@ -105,6 +105,10 @@
                 .text:not(.empty) {
                     display: none;
                 }
+                .counter-label {
+                    display: inline-flex;
+                    gap: @1;
+                }
 
                 @media @media-md-down {
                     .text,
